fix background position on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@
 html {
   width: 100%;
   height: 100%;
-  background: url(../images/bg.jpg) no-repeat center center fixed;
+  background: url(../images/bg.jpg) no-repeat bottom center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
